--- a/less/example.less
+++ b/less/example.less
@@ -16,12 +16,13 @@ body {
 
 .block-group {
 	.row();
+	background-color: black;
 }
 
 .block {
 	.col(1, 1, 1);
 	text-align: center;
-	background-color: #eeeeee;
+	background-color: black;
 }
 
 .block-inner {
