--- a/sass/example.scss
+++ b/sass/example.scss
@@ -16,12 +16,13 @@ body {
 
 .block-group {
 	@include row();
+	background-color: black;
 }
 
 .block {
 	@include col(1, 1, 1);
 	text-align: center;
-	background-color: #eeeeee;
+	background-color: black;
 }
 
 .block-inner {
