--- a/less/example.less
+++ b/less/example.less
@@ -75,6 +75,14 @@ body {
 	.offset-right(2, 1, 1);
 }
 
+#block-twentyfive {
+	.push(4, 4, 2);
+}
+
+#block-twentysix {
+	.pull(4, 4, 2);
+}
+
 #container-two {
 	.row(true, true);
 	margin-top: 30px;
