--- a/less/yags.less
+++ b/less/yags.less
@@ -183,3 +183,34 @@ When calling, pass the number of columns for each layout
 	margin-right: @column_width_large_layout * @large_cols;
 }
 
+.pull(@large_cols:@num_columns_large, @medium_cols:@num_columns_medium, @small_cols:@num_columns_small) {
+	position: relative; 
+
+	.responsive(@breakpoint_medium_layout - 1) {
+		/* Move the column to the left
+		(left == -BEFORE's width) */
+		left: -(@column_width_medium_layout * @medium_cols);
+  	}
+
+	.responsive(@breakpoint_small_layout - 1) {
+		left: -(@column_width_small_layout * @small_cols);
+	}
+
+	left: -(@column_width_large_layout * @large_cols);
+}
+
+.push(@large_cols:@num_columns_large, @medium_cols:@num_columns_medium, @small_cols:@num_columns_small) {
+	position: relative; 
+
+	.responsive(@breakpoint_medium_layout - 1) {
+		/* Move the column to the left
+		(left == -BEFORE's width) */
+		left: (@column_width_medium_layout * @medium_cols);
+  	}
+
+	.responsive(@breakpoint_small_layout - 1) {
+		left: (@column_width_small_layout * @small_cols);
+	}
+
+	left: (@column_width_large_layout * @large_cols);
+}
