--- a/example.css
+++ b/example.css
@@ -38,6 +38,11 @@ Usage:
 /* 
 Border-box include
 */
+.border-box, .block-group, .block-group:before, .block-group:after, .block-small, .block-small:after, .block-small:before, .block-medium, .block-medium:after, .block-medium:before, .block-large, .block-large:after, .block-large:before, .block-xlarge, .block-xlarge:after, .block-xlarge:before, #block-twentytwo, #block-twentytwo:after, #block-twentytwo:before, #container-two, #container-two:before, #container-two:after, .overlay-col, .overlay-col:after, .overlay-col:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 /*
 Row
 */
@@ -46,9 +51,6 @@ Cell
 When calling, pass the number of columns for each layout
 */
 .block-group {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   *zoom: 1;
   /* ul/li compatibility */
   list-style-type: none;
@@ -58,10 +60,7 @@ When calling, pass the number of columns for each layout
   .block-group:before, .block-group:after {
     display: table;
     content: "";
-    line-height: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    line-height: 0; }
   .block-group:after {
     clear: both; }
   .block-group > .block-group {
@@ -89,9 +88,6 @@ When calling, pass the number of columns for each layout
       margin-right: 10px; } }
 
 .block-small {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 8.33333%; }
   @media only screen and (max-width: 1023px) {
@@ -100,15 +96,8 @@ When calling, pass the number of columns for each layout
   @media only screen and (max-width: 761px) {
     .block-small {
       width: 16.66667%; } }
-  .block-small:after, .block-small:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
 
 .block-medium {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 33.33333%; }
   @media only screen and (max-width: 1023px) {
@@ -117,15 +106,8 @@ When calling, pass the number of columns for each layout
   @media only screen and (max-width: 761px) {
     .block-medium {
       width: 33.33333%; } }
-  .block-medium:after, .block-medium:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
 
 .block-large {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 50%; }
   @media only screen and (max-width: 1023px) {
@@ -134,15 +116,8 @@ When calling, pass the number of columns for each layout
   @media only screen and (max-width: 761px) {
     .block-large {
       width: 100%; } }
-  .block-large:after, .block-large:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
 
 .block-xlarge {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 100%; }
   @media only screen and (max-width: 1023px) {
@@ -151,10 +126,6 @@ When calling, pass the number of columns for each layout
   @media only screen and (max-width: 761px) {
     .block-xlarge {
       width: 100%; } }
-  .block-xlarge:after, .block-xlarge:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
   .block-xlarge .block-inner {
     margin-left: 0px; }
   .block-xlarge .block-inner {
@@ -172,9 +143,6 @@ When calling, pass the number of columns for each layout
   margin-right: 0px; }
 
 #block-twentytwo {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 16.66667%;
   margin-left: 16.66667%; }
@@ -184,10 +152,6 @@ When calling, pass the number of columns for each layout
   @media only screen and (max-width: 761px) {
     #block-twentytwo {
       width: 16.66667%; } }
-  #block-twentytwo:after, #block-twentytwo:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
   @media only screen and (max-width: 1023px) {
     #block-twentytwo {
       margin-left: 8.33333%; } }
@@ -220,9 +184,6 @@ When calling, pass the number of columns for each layout
       left: -33.33333%; } }
 
 #container-two {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   *zoom: 1;
   /* ul/li compatibility */
   list-style-type: none;
@@ -247,10 +208,7 @@ When calling, pass the number of columns for each layout
   #container-two:before, #container-two:after {
     display: table;
     content: "";
-    line-height: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    line-height: 0; }
   #container-two:after {
     clear: both; }
   #container-two > #container-two {
@@ -274,9 +232,6 @@ Grid overlay
 
 .overlay-col {
   height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   float: left;
   width: 8.33333%;
   background-color: red;
@@ -287,10 +242,6 @@ Grid overlay
   @media only screen and (max-width: 761px) {
     .overlay-col {
       width: 16.66667%; } }
-  .overlay-col:after, .overlay-col:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
   .overlay-col .inner {
     height: 100%;
     margin-left: 20px;
